Feat: add clickedTabToCenter

--- a/clone.html
+++ b/clone.html
@@ -381,7 +381,7 @@
                                                                     class="flex-container justify-content-start text-left text relative overflow-y-auto hidden-scrollbar scrollbar-width-none"
                                                                     id="tabs-placesByAreasTabId" role="tablist">
                                                                     <!-- 전 세계 -->
-                                                                    <button style="margin-left: -10px"
+                                                                    <button style="margin-left: -10px; transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
                                                                         id="tab-placesByAreasTabId-0"
                                                                         aria-controls="panel-placesByAreasTabId-0"
                                                                         aria-selected="true" role="tab"
@@ -392,70 +392,77 @@
                                                                         </div>
                                                                     </button>
                                                                     <!-- 동아시아 -->
-                                                                    <button id="tab-placesByAreasTabId-1"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);" 
+                                                                        id="tab-placesByAreasTabId-1"
                                                                         aria-controls="panel-placesByAreasTabId-1"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8  hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8  hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             동아시아
                                                                         </div>
                                                                     </button>
                                                                     <!-- 동남아시아 -->
-                                                                    <button id="tab-placesByAreasTabId-2"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                                                                        id="tab-placesByAreasTabId-2"
                                                                         aria-controls="panel-placesByAreasTabId-2"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             동남아시아
                                                                         </div>
                                                                     </button>
                                                                     <!-- 유럽 -->
-                                                                    <button id="tab-placesByAreasTabId-3"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                                                                        id="tab-placesByAreasTabId-3"
                                                                         aria-controls="panel-placesByAreasTabId-3"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             유럽
                                                                         </div>
                                                                     </button>
                                                                     <!-- 북남미 -->
-                                                                    <button id="tab-placesByAreasTabId-4"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                                                                        id="tab-placesByAreasTabId-4"
                                                                         aria-controls="panel-placesByAreasTabId-4"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             북남미
                                                                         </div>
                                                                     </button>
                                                                     <!-- 오세아니아 -->
-                                                                    <button id="tab-placesByAreasTabId-5"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                                                                        id="tab-placesByAreasTabId-5"
                                                                         aria-controls="panel-placesByAreasTabId-5"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             오세아니아
                                                                         </div>
                                                                     </button>
                                                                     <!-- 기타 아시아 지역 -->
-                                                                    <button id="tab-placesByAreasTabId-6"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                                                                        id="tab-placesByAreasTabId-6"
                                                                         aria-controls="panel-placesByAreasTabId-6"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             기타 아시아 지역
                                                                         </div>
                                                                     </button>
                                                                     <!-- 아프리카 -->
-                                                                    <button id="tab-placesByAreasTabId-7"
+                                                                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                                                                        id="tab-placesByAreasTabId-7"
                                                                         aria-controls="panel-placesByAreasTabId-7"
                                                                         aria-selected="false" role="tab"
-                                                                        class="transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
+                                                                        class="scale-96 transparent-button relative radius-8 hover-background-color-247 font-grey-113 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             아프리카
@@ -3012,38 +3019,45 @@
                 </div>
                 <div id="tabs-seo" style="margin-top: 8px;" class="flex-container justify-content-start"
                     role="tablist">
-                    <button style="margin-left: -10px;" id="tab-seo-0"
+                    <button style="margin-left: -10px; transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-0"
                         class="font-black-34 relative pa_absolute pa_height-2 pa_width-calc-100-20 pa_bottom--6 pa_left-10 pa_background-color-34 pa_content background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0 cursor-default"
                         role="tab" aria-controls="panel-seo-0" aria-selected="false">
                         인기
                     </button>
-                    <button id="tab-seo-1"
-                        class="font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
+                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-1"
+                        class="scale-96 font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
                         role="tab" aria-controls="panel-seo-1" aria-selected="false">
                         예술 및 문화
                     </button>
-                    <button id="tab-seo-2"
-                        class="font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
+                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-2"
+                        class="scale-96 font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
                         role="tab" aria-controls="panel-seo-2" aria-selected="false">
                         야외
                     </button>
-                    <button id="tab-seo-3"
-                        class="font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
+                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-3"
+                        class="scale-96 font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
                         role="tab" aria-controls="panel-seo-3" aria-selected="false">
                         산맥
                     </button>
-                    <button id="tab-seo-4"
-                        class="font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
+                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-4"
+                        class="scale-96 font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
                         role="tab" aria-controls="panel-seo-4" aria-selected="false">
                         해변
                     </button>
-                    <button id="tab-seo-5"
-                        class="font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
+                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-5"
+                        class="scale-96 font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
                         role="tab" aria-controls="panel-seo-5" aria-selected="false">
                         카테고리
                     </button>
-                    <button id="tab-seo-6"
-                        class="font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
+                    <button style="transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1); transition: transform 0.1s cubic-bezier(0.2, 0, 0, 1);"
+                        id="tab-seo-6"
+                        class="scale-96 font-grey-113 relative background-color-transparent no-border no-outline font-14px font-500 padding-10 margin-6-6-6-0"
                         role="tab" aria-controls="panel-seo-6" aria-selected="false">
                         즐길거리
                     </button>
