--- a/clone.html
+++ b/clone.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/pb.css">
     <link rel="stylesheet" href="css/pb_interaction.css">
     <link rel="stylesheet" href="css/placeholder.css">
+    <link rel="stylesheet" href="css/scroll.css">
 </head>
 
 <body>
@@ -169,11 +170,11 @@
                                                     </label>
                                                 </div>
                                                 <!-- 여행지 검색 레이어 -->
-                                                <div style="left: 0px; top: 64px; padding: 40px 32px; box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.15); width: 475px; max-height: calc(100vh - 200px); overflow-x: hidden; overscroll-behavior: contain;"
-                                                    class="absolute margin-top-12 radius-32 visibility-hidden background-color-basic"
+                                                <div style="left: 0px; top: 64px; padding: 40px 16px; box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.15); width: 475px; max-height: calc(100vh - 200px); overflow-x: hidden; overscroll-behavior: contain;"
+                                                    class="layer-scroll-bar absolute margin-top-12 radius-32 overflow-y-scroll visibility-hidden background-color-basic"
                                                     id="structured-search-input-field-query-panel">
-                                                    <div style="overflow: hidden; text-align: left; row-gap: 24px;"
-                                                        class="flex-container flex-column">
+                                                    <div style="padding: 0px 16px 24px;"
+                                                        class="flex-container flex-column text-left row-gap-24 overflow-hidden">
                                                         <!-- 지역으로 검색하기 -->
                                                         <div>
                                                             <div style="margin-block-end: 16px; margin-inline-start: 8px;"
@@ -1668,7 +1669,7 @@
                                                                                     aria-controls="panel--tabs--0"
                                                                                     aria-selected="true"
                                                                                     style="padding: 8px 12px; margin: 4px 2px 4px 0px;"
-                                                                                    class="text font-600 font-black-34 font-14px line-height-18px radius-100 background-color-basic grey-border-221"
+                                                                                    class="text font-500 font-black-34 font-14px line-height-18px radius-100 background-color-basic grey-border-221"
                                                                                     role="tab">
                                                                                     날짜 지정
                                                                                 </button>
@@ -1676,7 +1677,7 @@
                                                                                     aria-controls="panel--tabs--1"
                                                                                     aria-selected="true"
                                                                                     style="padding: 8px 12px; margin: 4px 2px;"
-                                                                                    class="text font-600 font-black-34 font-14px line-height-18px radius-100 hover-background-color-221 background-color-transparent transparent-border"
+                                                                                    class="text font-500 font-black-34 font-14px line-height-18px radius-100 hover-background-color-221 background-color-transparent transparent-border"
                                                                                     role="tab">
                                                                                     월 단위
                                                                                 </button>
@@ -1684,7 +1685,7 @@
                                                                                     aria-controls="panel--tabs--2"
                                                                                     aria-selected="true"
                                                                                     style="padding: 8px 12px; margin: 4px 0px 4px 2px;"
-                                                                                    class="text font-600 font-black-34 font-14px line-height-18px radius-100 hover-background-color-221 background-color-transparent transparent-border"
+                                                                                    class="text font-500 font-black-34 font-14px line-height-18px radius-100 hover-background-color-221 background-color-transparent transparent-border"
                                                                                     role="tab">
                                                                                     유연한 일정
                                                                                 </button>
@@ -1789,7 +1790,7 @@
                                             </div>
                                             <!-- 게스트 추가 레이어 -->
                                             <div style="box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15); overscroll-behavior: contain; right: 0px; top: 64px; max-height: calc(100vh - 200px);"
-                                                class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden overflow-auto"
+                                                class="layer-scroll-bar background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden overflow-auto"
                                                 id="structured-search-input-field-guests-panel">
                                                 <div style="padding: 0px 6px; width: 342px;">
                                                     <!-- 성인 수 -->
