Feat: add toggle headernav-profile-button

--- a/clone.html
+++ b/clone.html
@@ -2023,10 +2023,6 @@
                             </div>
                         </div>
                         <!-- 마이페이지 설정 -->
-                         <!-- TODO 버튼 토글 기능 -->
-                          <!-- [ ] 버튼 토글 기능
-                          [ ] 버튼 켜지면 box-shadow 유지
-                          [ ] 레이어 말고 다른곳 클릭하면 버튼 off -->
                         <div class="relative" data-profile-menu-open = "false">
                             <button style="padding: 8px 8px 8px 14px;"
                                 class="flex-container justify-content-between align-items-center background-color-basic radius-30 grey-border-221 relative z-index-1 hover-headernav-profile-button duration-200ms cubic-function transition-box-shadow height-48"
@@ -2052,7 +2048,7 @@
                             </button>
 
                             <div style="margin-top: 32px; padding: 8px 0px; max-height: calc(100vh - 100px); box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 16px;"
-                                class="text-left absolute right-0 top-21 background-color-basic radius-12 min-width-240 overflow-y-auto z-index-2"
+                                class="opacity-0 visibility-hidden text-left absolute right-0 top-21 background-color-basic radius-12 min-width-240 overflow-y-auto z-index-2"
                                 id="simple-header-profile-menu">
                                 <a class="hover-background-color-247 padding-12-16 width-full overflow-visible flex-container line-height-18px text font-14px font-500"
                                     href="https://www.airbnb.co.kr/signup_login">
